css/chat.css: Fix output field overlapping with input field.

--- a/collab/htdocs/collabcommon/css/chat.css
+++ b/collab/htdocs/collabcommon/css/chat.css
@@ -112,7 +112,7 @@
     left: 0px;
     right: 0px;
     margin: 0px;
-    bottom: 2.1em;
+    bottom: 2.3em;
     overflow-y: scroll;
      -webkit-overflow-scrolling: touch;
 }
